--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_gravity="center"
                 android:src="@drawable/gip_logo"/>
 
@@ -72,15 +72,6 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <!--<Button-->
-                <!--android:id="@+id/email_sign_in_button"-->
-                <!--style="?android:textAppearanceSmall"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="16dp"-->
-                <!--android:text="@string/action_sign_in"-->
-                <!--android:textStyle="bold" />-->
-
             <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
@@ -88,6 +79,17 @@
                 style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                 android:text="se connecter avec une adresse email"
                 tools:ignore="UnusedIds" />
+
+
+            <Button
+                android:id="@+id/email_sign_up_button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAllCaps="false"
+                style="?android:attr/borderlessButtonStyle"
+                android:text="vous n'êtes pas encore inscrit? cliquez ici pour créer un compte "
+                android:textAlignment="center"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
