--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -116,20 +117,24 @@
                     android:layout_gravity="center"/>
             </LinearLayout>
 
-            <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/google_button"
                 style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-                android:text="se connecter avec Gmail"
+                android:layout_height="31dp"
+                android:layout_gravity="center_vertical"
+                android:height="10dp"
+                android:gravity="center"
+                android:text="Continuer avec Gmail              "
                 tools:ignore="UnusedIds" />
 
-            <com.firebase.ui.auth.util.ui.SupportVectorDrawablesButton
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+
+            <com.facebook.login.widget.LoginButton
                 android:id="@+id/facebook_button"
-                style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
-                android:text="se connecter avec Facebook"
+                style='@style/FirebaseUI.Button.AccountChooser.FacebookButton'
+                android:layout_height="56dp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 tools:ignore="UnusedIds" />
 
             <Button
