logout and listmishap in progress

--- a/app/src/main/res/layout/activity_list_mishap.xml
+++ b/app/src/main/res/layout/activity_list_mishap.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".ListMishapActivity">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"/>
+
+    <Button
+        android:id="@+id/sign_out_button"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/action_sign_out"
+        android:textStyle="bold" />
+
 </android.support.constraint.ConstraintLayout>
