--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,13 +139,15 @@
                 tools:ignore="UnusedIds" />
 
             <Button
-                android:id="@+id/email_sign_out_button"
+                android:id="@+id/sign_out_button_main"
+                android:visibility="gone"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_out"
                 android:textStyle="bold" />
+
 
         </LinearLayout>
     </ScrollView>
