--- a/app/src/main/res/layout/activity_form_mishap.xml
+++ b/app/src/main/res/layout/activity_form_mishap.xml
@@ -46,14 +46,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="#a40404"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent" />
 
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageOfTheTypeOfIncident"
         android:layout_width="75dp"
         android:layout_height="66dp"
         android:layout_marginTop="68dp"
@@ -92,7 +92,7 @@
         android:layout_marginStart="28dp"
         android:text="Description"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent" />
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/typeOfTheIncidentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -120,10 +120,10 @@
         android:layout_marginStart="8dp"
         android:text='"description type"'
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintBottom_toTopOf="@+id/locationMishap"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView1" />
+        app:layout_constraintStart_toEndOf="@+id/imageOfTheTypeOfIncident" />
 
     <TextView
         android:id="@+id/textView12"
@@ -136,13 +136,13 @@
         android:layout_marginTop="32dp"
         android:text="Importance"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
+        app:layout_constraintEnd_toStartOf="@+id/severityChoice"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <RadioGroup
-        android:id="@+id/radioGroup2"
+        android:id="@+id/severityChoice"
         android:layout_width="132dp"
         android:layout_height="105dp"
         android:layout_marginBottom="8dp"
@@ -150,27 +150,27 @@
         android:layout_marginRight="88dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/locationMishap"
         app:layout_constraintVertical_bias="0.2">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/severityH"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Élevée" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/severityN"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Moyenne" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/severityL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -178,7 +178,7 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/locationMishap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
@@ -187,10 +187,10 @@
         android:hint="Ex: O+107"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView1" />
+        app:layout_constraintTop_toBottomOf="@+id/imageOfTheTypeOfIncident" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/descriptionBox"
         android:layout_width="321dp"
         android:layout_height="85dp"
         android:layout_marginBottom="56dp"
@@ -207,7 +207,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/sendMishap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
