--- a/app/src/main/res/layout/activity_list_mishap.xml
+++ b/app/src/main/res/layout/activity_list_mishap.xml
@@ -7,10 +7,10 @@
     tools:context=".ListMishapActivity">
 
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="458dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/listOfAllMishap"
+        android:layout_width="355dp"
+        android:layout_height="442dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -20,21 +20,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/listOfAllMishap"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="387dp"
+        android:layout_width="362dp"
         android:layout_height="37dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,21 +38,21 @@
 
         <RadioButton
             android:id="@+id/radioDate"
-            android:layout_width="wrap_content"
+            android:layout_width="26dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Date" />
 
         <RadioButton
             android:id="@+id/radioType"
-            android:layout_width="wrap_content"
+            android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Type" />
 
         <RadioButton
             android:id="@+id/radioImportance"
-            android:layout_width="wrap_content"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Importance"
@@ -65,7 +61,7 @@
 
         <SearchView
             android:id="@+id/searchBar"
-            android:layout_width="144dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </LinearLayout>
