--- a/app/src/main/res/layout/activity_form_mishap.xml
+++ b/app/src/main/res/layout/activity_form_mishap.xml
@@ -52,13 +52,13 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="12dp"
         android:text="Détails"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/descriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/severityChoice" />
 
     <TextView
         android:id="@+id/TextSalle"
@@ -92,11 +92,12 @@
         android:id="@+id/TextImportance"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
+        android:layout_marginTop="16dp"
         android:text="Urgence"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextSalle" />
+        app:layout_constraintTop_toBottomOf="@+id/locationMishap" />
 
     <RadioGroup
         android:id="@+id/severityChoice"
@@ -152,8 +153,6 @@
         android:layout_height="85dp"
         android:layout_marginBottom="56dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginStart="32dp"
         android:background="@layout/imageview_border"
         android:ems="10"
@@ -161,7 +160,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
         android:id="@+id/sendMishap"
