modification form mishap + landscape of form mishap

--- a/app/src/main/res/layout/type_choice.xml
+++ b/app/src/main/res/layout/type_choice.xml
@@ -15,8 +15,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
-        android:text="          Veuillez choisir un type d'incident"
+        android:text="Veuillez choisir un type d'incident"
         android:textSize="18dp"
+        android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
