--- a/app/src/main/res/layout-land/activity_form_mishap.xml
+++ b/app/src/main/res/layout-land/activity_form_mishap.xml
@@ -23,7 +23,7 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="390dp"
+        android:layout_width="wrap_content"
         android:layout_height="10dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -37,13 +37,13 @@
 
     <ImageView
         android:id="@+id/imageOfTheTypeOfIncident"
-        android:layout_width="75dp"
-        android:layout_height="65dp"
+        android:layout_width="86dp"
+        android:layout_height="85dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="56dp"
         android:background="@layout/imageview_border"
         android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gip_logo" />
@@ -52,13 +52,15 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:text="Détails"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintEnd_toStartOf="@+id/descriptionBox"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/severityChoice" />
+        app:layout_constraintTop_toTopOf="@+id/descriptionBox" />
 
     <TextView
         android:id="@+id/TextSalle"
@@ -69,7 +71,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="Salle"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/locationMishap"
         app:layout_constraintEnd_toStartOf="@+id/locationMishap"
         app:layout_constraintTop_toBottomOf="@+id/buildingMishap" />
@@ -78,37 +80,40 @@
         android:id="@+id/typeOfTheIncidentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text='"description type"'
         android:textSize="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageOfTheTypeOfIncident"
         app:layout_constraintStart_toEndOf="@+id/imageOfTheTypeOfIncident"
-        app:layout_constraintTop_toTopOf="@+id/imageOfTheTypeOfIncident"
-        android:layout_marginLeft="12dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageOfTheTypeOfIncident" />
 
     <TextView
         android:id="@+id/TextImportance"
         android:layout_width="wrap_content"
         android:layout_height="27dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:text="Urgence"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationMishap" />
+        app:layout_constraintBottom_toTopOf="@+id/severityChoice"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/severityChoice"
-        android:layout_width="322dp"
+        android:layout_width="0dp"
         android:layout_height="32dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionBox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextImportance">
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/severityL"
@@ -148,19 +153,21 @@
     <EditText
         android:id="@+id/descriptionBox"
         android:layout_width="0dp"
-        android:layout_height="85dp"
-        android:layout_marginBottom="56dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="60dp"
         android:background="@layout/imageview_border"
         android:ems="10"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/sendMishap"
+        app:layout_constraintHorizontal_bias="0.709"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="@+id/sendMishap"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/sendMishap"
@@ -168,12 +175,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Envoyer l'incident"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionBox" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/titleMishap"
@@ -181,7 +187,7 @@
         android:layout_height="47dp"
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="Ex: prise en panne"
         android:inputType="textMultiLine"
@@ -209,7 +215,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="Batiment"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/buildingMishap"
         app:layout_constraintEnd_toStartOf="@+id/buildingMishap"
         app:layout_constraintTop_toTopOf="@+id/buildingMishap" />
@@ -223,7 +229,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="Titre"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/buildingMishap"
         app:layout_constraintEnd_toStartOf="@+id/titleMishap"
         app:layout_constraintTop_toTopOf="@+id/titleMishap" />
